[package]
name = "bachelor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
csv = "1.2"
dynamic-weighted-index = "0.1.0"
polars = "0.30.0"
incr_stats = "1.0.1"